@@ -5,9 +5,17 @@ import "../js/drawing.js" as Draw
 
 Rectangle {
 	id: checklistline
-	height: 25
+	height: {
+		var desc_heigth = descText.height;
+		if (ref == 0)
+			desc_heigth = add_button_rect.height;
+		return (desc_heigth + 5) < minimumHeight ? minimumHeight : desc_heigth + 5;
+	}
 	width: parent.width
-	property int checkWidth: checklistline.height - 5 + 10
+
+	property int minimumHeight: 25
+	property int lastLineHeigth: 40
+	property int checkWidth: minimumHeight - 5 + 10
 	property int dicePoolWidth: 120
 	property int spacer: 10
 	property int fontSize: 14
@@ -17,13 +25,14 @@ Rectangle {
 
 	Column {
 		Row {
+			visible: ref != 0
 			Rectangle {
 				width: checkWidth
 				height: checklistline.height - 1
 
 				Rectangle {
-					width: checklistline.height - 5
-					height: checklistline.height - 5
+					width: minimumHeight - 5
+					height: minimumHeight - 5
 					anchors.left: parent.left
 					anchors.verticalCenter: parent.verticalCenter
 					border.width: 1
@@ -40,8 +49,9 @@ Rectangle {
 
 			DicePool {
 				width: dicePoolWidth
-				height: checklistline.height - 1
+				height: minimumHeight - 1
 				center: false
+				anchors.verticalCenter: parent.verticalCenter
 				pool: checkDicePool
 				color: "white"
 			}
@@ -49,15 +59,15 @@ Rectangle {
 			FlowText {
 				id: descText
 				width: checklistline.width - checkWidth - dicePoolWidth
-				height: checklistline.height - 1
 				pixelSize: fontSize
 				font: "Comic Sans MS"
+				anchors.verticalCenter: parent.verticalCenter
 				text: checkDescription
 			}
-
 		}
 
 		Row {
+			visible: ref != 0
 			Rectangle {
 				height: 1
 				width: checkWidth
@@ -70,23 +80,55 @@ Rectangle {
 				color: "darkgray"
 			}
 		}
+
+		Row {
+			visible: ref == 0
+			Rectangle {
+				id: add_button_rect
+				width: checklistline.width
+				height: add_button.height + 10
+
+				Button {
+					id: add_button
+					y: 10
+					width: add_text.width + 10
+					anchors.verticalCenter: parent.verticalCenter
+
+					Text {
+						id: add_text
+						anchors.verticalCenter: parent.verticalCenter
+						anchors.horizontalCenter: parent.horizontalCenter
+						font.pixelSize: 16
+						font.family: "Comic Sans MS"
+						text: checkDescription
+					}
+				}
+			}
+		}
 	}
 
 	MouseArea {
-		width: checkWidth + dicePoolWidth
+		width: checkWidth + dicePoolWidth;
+		height: checklistline.height
 		anchors.top: parent.top
 		anchors.left: parent.left
-		anchors.bottom: parent.bottom
 		onClicked: {
-			characterData.checkItem(ref);
+			if (ref == 0) {
+				checklist.checkItemRef = ref;
+				checkListItemDialogDicePool.pool = "";
+				checkListItemDialogText.boxText = "";
+				checkListItemDialog.visible = true;
+			}
+			else
+				characterData.checkItem(ref);
 		}
 	}
 
 	MouseArea {
 		width: checklistline.width - (checkWidth + dicePoolWidth)
+		height: checklistline.height
 		anchors.top: parent.top
 		anchors.right: parent.right
-		anchors.bottom: parent.bottom
 		onClicked: {
 			checklist.checkItemRef = ref;
 			if (ref == 0) {
